Fix semantic dropdown regression
The metric selection menus don't line up anymore.  Fixing them required
finding what css changed between 2.1.8 and 2.2.6 that caused it.  It
turned out to be this line, and all other changes could be ignored.  So
a patch makes more sense than a roll-back.

Bug: T150664

--- a/src/layouts/metrics-by-project/styles.css
+++ b/src/layouts/metrics-by-project/styles.css
@@ -8,6 +8,9 @@ body {
 .ui.input input {
     border-radius: 2px;
 }
+.ui.vertical.menu .dropdown.item .menu {
+    top: 0% !important;
+}
 
 /* page layout */
 .page.container {
